build/log/idf_py_stdout_output_23676
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\A.VENKATRAMANA\OneDrive\Desktop\espproject\pothole_lte\build\bootloader\esp-idf\esptool_py && C:\Espressif\tools\python\v5.2.7\venv\Scripts\python.exe C:/esp/v5.2.7/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/A.VENKATRAMANA/OneDrive/Desktop/espproject/pothole_lte/build/bootloader/bootloader.bin"
Bootloader binary size 0x5490 bytes. 0x2b70 bytes (34%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20250707\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.7\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/A.VENKATRAMANA/OneDrive/Desktop/espproject/pothole_lte/build/config -IC:/Users/A.VENKATRAMANA/OneDrive/Desktop/espproject/pothole_lte/main -IC:/Users/A.VENKATRAMANA/OneDrive/Desktop/espproject/pothole_lte/main/certs -IC:/esp/v5.2.7/esp-idf/components/newlib/platform_include -IC:/esp/v5.2.7/esp-idf/components/freertos/config/include -IC:/esp/v5.2.7/esp-idf/components/freertos/config/include/freertos -IC:/esp/v5.2.7/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v5.2.7/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v5.2.7/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v5.2.7/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v5.2.7/esp-idf/components/freertos/esp_additions/include -IC:/esp/v5.2.7/esp-idf/components/esp_hw_support/include -IC:/esp/v5.2.7/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v5.2.7/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/esp/v5.2.7/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/esp/v5.2.7/esp-idf/components/heap/include -IC:/esp/v5.2.7/esp-idf/components/log/include -IC:/esp/v5.2.7/esp-idf/components/soc/include -IC:/esp/v5.2.7/esp-idf/components/soc/esp32s3 -IC:/esp/v5.2.7/esp-idf/components/soc/esp32s3/include -IC:/esp/v5.2.7/esp-idf/components/hal/platform_port/include -IC:/esp/v5.2.7/esp-idf/components/hal/esp32s3/include -IC:/esp/v5.2.7/esp-idf/components/hal/include -IC:/esp/v5.2.7/esp-idf/components/esp_rom/include -IC:/esp/v5.2.7/esp-idf/components/esp_rom/include/esp32s3 -IC:/esp/v5.2.7/esp-idf/components/esp_rom/esp32s3 -IC:/esp/v5.2.7/esp-idf/components/esp_common/include -IC:/esp/v5.2.7/esp-idf/components/esp_system/include -IC:/esp/v5.2.7/esp-idf/components/esp_system/port/soc -IC:/esp/v5.2.7/esp-idf/components/esp_system/port/include/private -IC:/esp/v5.2.7/esp-idf/components/xtensa/esp32s3/include -IC:/esp/v5.2.7/esp-idf/components/xtensa/include -IC:/esp/v5.2.7/esp-idf/components/xtensa/deprecated_include -IC:/esp/v5.2.7/esp-idf/components/lwip/include -IC:/esp/v5.2.7/esp-idf/components/lwip/include/apps -IC:/esp/v5.2.7/esp-idf/components/lwip/include/apps/sntp -IC:/esp/v5.2.7/esp-idf/components/lwip/lwip/src/include -IC:/esp/v5.2.7/esp-idf/components/lwip/port/include -IC:/esp/v5.2.7/esp-idf/components/lwip/port/freertos/include -IC:/esp/v5.2.7/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v5.2.7/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v5.2.7/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/v5.2.7/esp-idf/components/driver/include -IC:/esp/v5.2.7/esp-idf/components/driver/deprecated -IC:/esp/v5.2.7/esp-idf/components/driver/analog_comparator/include -IC:/esp/v5.2.7/esp-idf/components/driver/dac/include -IC:/esp/v5.2.7/esp-idf/components/driver/gpio/include -IC:/esp/v5.2.7/esp-idf/components/driver/gptimer/include -IC:/esp/v5.2.7/esp-idf/components/driver/i2c/include -IC:/esp/v5.2.7/esp-idf/components/driver/i2s/include -IC:/esp/v5.2.7/esp-idf/components/driver/ledc/include -IC:/esp/v5.2.7/esp-idf/components/driver/mcpwm/include -IC:/esp/v5.2.7/esp-idf/components/driver/parlio/include -IC:/esp/v5.2.7/esp-idf/components/driver/pcnt/include -IC:/esp/v5.2.7/esp-idf/components/driver/rmt/include -IC:/esp/v5.2.7/esp-idf/components/driver/sdio_slave/include -IC:/esp/v5.2.7/esp-idf/components/driver/sdmmc/include -IC:/esp/v5.2.7/esp-idf/components/driver/sigma_delta/include -IC:/esp/v5.2.7/esp-idf/components/driver/spi/include -IC:/esp/v5.2.7/esp-idf/components/driver/temperature_sensor/include -IC:/esp/v5.2.7/esp-idf/components/driver/touch_sensor/include -IC:/esp/v5.2.7/esp-idf/components/driver/twai/include -IC:/esp/v5.2.7/esp-idf/components/driver/uart/include -IC:/esp/v5.2.7/esp-idf/components/driver/usb_serial_jtag/include -IC:/esp/v5.2.7/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/esp/v5.2.7/esp-idf/components/esp_pm/include -IC:/esp/v5.2.7/esp-idf/components/esp_ringbuf/include -IC:/esp/v5.2.7/esp-idf/components/nvs_flash/include -IC:/esp/v5.2.7/esp-idf/components/spi_flash/include -IC:/esp/v5.2.7/esp-idf/components/esp_partition/include -IC:/esp/v5.2.7/esp-idf/components/esp_timer/include -IC:/esp/v5.2.7/esp-idf/components/esp_adc/include -IC:/esp/v5.2.7/esp-idf/components/esp_adc/interface -IC:/esp/v5.2.7/esp-idf/components/esp_adc/esp32s3/include -IC:/esp/v5.2.7/esp-idf/components/esp_adc/deprecated/include -IC:/esp/v5.2.7/esp-idf/components/esp_psram/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/A.VENKATRAMANA/OneDrive/Desktop/espproject/pothole_lte=. -fmacro-prefix-map=C:/esp/v5.2.7/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/A.VENKATRAMANA/OneDrive/Desktop/espproject/pothole_lte/main/main.c
C:/Users/A.VENKATRAMANA/OneDrive/Desktop/espproject/pothole_lte/main/main.c: In function 'mqtt_encode_remaining':
C:/Users/A.VENKATRAMANA/OneDrive/Desktop/espproject/pothole_lte/main/main.c:597:10: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
  597 |          if (len > 0) b |= 0x80; buf[i++] = b; } while (len > 0);
      |          ^~
C:/Users/A.VENKATRAMANA/OneDrive/Desktop/espproject/pothole_lte/main/main.c:597:34: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if'
  597 |          if (len > 0) b |= 0x80; buf[i++] = b; } while (len > 0);
      |                                  ^~~
C:/Users/A.VENKATRAMANA/OneDrive/Desktop/espproject/pothole_lte/main/main.c: At top level:
C:/Users/A.VENKATRAMANA/OneDrive/Desktop/espproject/pothole_lte/main/main.c:780:13: warning: 'mqtt_ping' defined but not used [-Wunused-function]
  780 | static void mqtt_ping(void)
      |             ^~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
